--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 .react-toast-notifications__container {
   padding: 0;
+  overflow: hidden hidden;
 }
 .react-toast-notifications__toast {
   width: 100%;
