--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 html {
   --blue: #147ec1;
   --lgt-blue: #3db5eb;
-  --lgtr-blue: #a6f7ff;
+  /* --lgtr-blue: #a6f7ff; */
+  --lgtr-blue: transparent;
   --drk-blue: #1663a0;
   --black: #32383c;
 }
@@ -20,10 +21,9 @@ button:active {
   border-color: var(--drk-blue);
 }
 
-button:focus {
-  outline: none;
+/* button:focus {
   background-color: var(--lgtr-blue);
-}
+} */
 
 *,
 *:focus,
