--- a/src/_fix.thuncate.css
+++ b/src/_fix.thuncate.css
@@ -25,3 +25,11 @@
   max-height: 27px;
   overflow: hidden;
 }
+
+.truncate {
+  box-sizing: border-box;
+  max-width: 100%;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
